--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="next">Next</string>
     <string name="driver">Driver</string>
     <string name="verify">Verify</string>
+    <string name="role">By Registering , you confirm that you accept our Term of Use, and Privacy Policy</string>
+    <string name="verify_driver">Verify National ID Card</string>
 </resources>
