--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="role">By Registering , you confirm that you accept our Term of Use, and Privacy Policy</string>
     <string name="verify_driver">Verify National ID Card</string>
     <string name="user_name">User Name</string>
+    <string name="finish">Finish</string>
 </resources>
