--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="verify_driver">Verify National ID Card</string>
     <string name="user_name">User Name</string>
     <string name="finish">Finish</string>
+    <string name="more">More</string>
+    <string name="schedule">Schedule</string>
 </resources>
