customer and menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,6 @@
     <string name="starttime">StartTime</string>
     <string name="arrive">Arrive</string>
     <string name="start">Start</string>
+    <string name="update">Update</string>
+    <string name="history">History</string>
 </resources>
